--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   carousel_slider: ^5.0.0
   smooth_page_indicator: ^1.2.0+3
   http: ^1.4.0
+  floating_bottom_navigation_bar: ^1.5.2
+  animated_bottom_navigation_bar: ^1.4.0
+  firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
   
 
 
@@ -32,10 +36,9 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
  
-  firebase_core: ^3.9.0
   otp_text_field_v2: ^1.0.3
   
-  firebase_auth: ^5.3.4
+
 
 
 flutter:
